Fix transport black issue